<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rviz_dynamic_slam_plugins</name>
  <version>1.0.0</version>
  <description>
    RVIZ plugins for displaying custom Dynamic SLAM messages
  </description>

 <maintainer email="jesse.morris@sydney.edu.edu.au">Jesse Morris</maintainer>

  <license>BSD</license>


  <author email="jesse.morris@sydney.edu.edu.au">Jesse Morris</author>


  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz_ogre_vendor</build_depend>

  <build_export_depend>rviz_ogre_vendor</build_export_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>rviz_ogre_vendor</exec_depend>

  <depend>dynamic_slam_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>gz_math_vendor</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>resource_retriever</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>